Fixing Compass image support not working
https://trello.com/c/vs5fHagd

Squashed commit of the following:

commit 3c26b298ef1cfa817eba5a5e934a89d0d0bd0c6b
Author: Leon Coto <leon.coto@mcsaatchi.com>
Date:   Tue Oct 22 13:53:31 2013 +0100

    Compass sprite support working.

commit bb15b33ac44206f0774c9d3341d31bde25036c0a
Author: Leon Coto <leon.coto@mcsaatchi.com>
Date:   Tue Oct 22 10:29:46 2013 +0100

    Compass enhancements

    - Adding an image to the client to test compass image
    - Fixing CSS embedding to get styles from css

commit 67d617e5cf027ade6ee9a883d0930641fc7ff2dd
Author: Leon Coto <leon.coto@mcsaatchi.com>
Date:   Mon Oct 21 17:20:49 2013 +0100

    Initial go at fixing compass images implementation

--- a/tasks/templates/scss/client.scss
+++ b/tasks/templates/scss/client.scss
@@ -1,1 +1,19 @@
 @import "common";
+
+// Images are configured correctly
+@import "compass/typography/text/replacement";
+h1 {
+  @include replace-text-with-dimensions("carnaby.png");
+}
+
+// Generated images are configured correctly
+@import "icons/*.png";
+.sprite {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  @include icons-sprite(square-one);
+  &:hover {
+    @include icons-sprite(square-two);
+  }
+}
